<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.FloatingActionButton
        android:elevation="5dp"
        android:id="@+id/fab"
        android:layout_margin="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        />
    <TextView
        android:id="@+id/text1"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grade" />
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_below="@+id/text1"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:entries="@array/gradeItems"
        />
    <TextView
        android:id="@+id/text2"
        android:layout_margin="5dp"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/department" />
    <Spinner
        android:id="@+id/spinner2"
        android:layout_below="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:entries="@array/departmentsItems"
        />

    <Button
        android:id="@+id/button3"
        android:layout_below="@+id/spinner2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text="@string/search"
        />

</RelativeLayout>